--- a/starter/style.css
+++ b/starter/style.css
@@ -15,7 +15,7 @@ body {
   background-color: #f7f7f7;
   min-height: 100vh;
 
-  display: flex;
+  display: flex
   align-items: center;
   justify-content: center;
 }
