--- a/starter/style.css
+++ b/starter/style.css
@@ -14,7 +14,7 @@ body {
   color: #555;
   background-color: #f7f7f7;
   min-height: 100vh;
-
+,n k k
   display: flex
   align-items: center;
   justify-content: center;
