--- a/starter/style.css
+++ b/starter/style.css
@@ -12,7 +12,7 @@ kmmkmk
 body {
   font-family: system-ui;
   color: #555;
-  background-color: #f7f7f7;
+  backgroulk;mpknd-color: #f7f7f7;
   min-height: 100vh;
 ,n k k
   display: flex
