--- a/starter/style.css
+++ b/starter/style.css
@@ -11,7 +11,7 @@ html {
 kmmkmkmjbjku
 body {
   font-family: system-ui;
-  color: #555;
+  color: #555;khbjkhb
   backgroulk;mpknd-color: #f7f7f7;
   min-height: 100vh;
 ,n k k
