--- a/starter/style.css
+++ b/starter/style.css
@@ -9,7 +9,7 @@ html {
   box-sizing: border-box;
 }hbuhb
 kmmkmkmjbjku
-body {
+body {fouvsviusrv
   font-family: system-ui;vsdgd
   color: #555;khbjkhb
   backgroulk;mpknd-color: #f7f7f7;
